index.html + style.css > Added Hero section plus started styling [button, margins, background]

--- a/index.html
+++ b/index.html
@@ -12,5 +12,16 @@
       <li class="nav-item"><a href="">About us</a></li>
       <li class="nav-item"><a href="">Contact us</a></li>
     </ul>
+    <div id="hero">
+      <div class="hero-item hero-card">
+        <h1>This website is awesome</h1>
+        <p>
+          This website has some subtext that goes here under the main title.
+          It's a smaller font and the color is lower contrast
+        </p>
+        <button>Sign up</button>
+      </div>
+      <img class="hero-item" src="" />
+    </div>
   </body>
 </html>
