Added Hero section and styling to index.html + style.css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <title>DT Gaming</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="styles/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <ul id="nav-bar">
@@ -14,14 +20,37 @@
     </ul>
     <div id="hero">
       <div class="hero-item hero-card">
-        <h1>This website is awesome</h1>
-        <p>
+        <h1 class="hero">This website is awesome</h1>
+        <p class="hero">
           This website has some subtext that goes here under the main title.
           It's a smaller font and the color is lower contrast
         </p>
         <button>Sign up</button>
       </div>
-      <img class="hero-item" src="" />
+      <img class="hero-item hero-img" src="images/gaming-dice.jpg" />
     </div>
+    <h1>Some random information.</h1>
+    <div id="info">
+      <div>
+        <img src="" />
+        <p></p>
+      </div>
+      <div>
+        <img src="" />
+        <p></p>
+      </div>
+      <div>
+        <img src="" />
+        <p></p>
+      </div>
+      <div>
+        <img src="" />
+        <p></p>
+      </div>
+    </div>
+    <div id="quote"></div>
+    <div id="footer"></div>
   </body>
 </html>
+
+<!-- Photo by <a href="https://unsplash.com/@timothycdykes?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Timothy Dykes</a> on <a href="https://unsplash.com/photos/a-close-up-of-a-metal-dice-with-numbers-on-it-RIeKX09EcBc?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a> -->
