Added information section to index/style

--- a/index.html
+++ b/index.html
@@ -29,23 +29,23 @@
       </div>
       <img class="hero-item hero-img" src="images/gaming-dice.jpg" />
     </div>
-    <h1>Some random information.</h1>
+    <h1>Gaming Sounds</h1>
     <div id="info">
-      <div>
-        <img src="" />
-        <p></p>
+      <div class="info-box">
+        <img class="info-img" src="images/forest.jpg" />
+        <p>Adventuring</p>
       </div>
-      <div>
-        <img src="" />
-        <p></p>
+      <div class="info-box">
+        <img class="info-img" src="images/door.jpg" />
+        <p>Open Door</p>
       </div>
-      <div>
-        <img src="" />
-        <p></p>
+      <div class="info-box">
+        <img class="info-img" src="images/treaure.jpg" />
+        <p>Treasure!</p>
       </div>
-      <div>
-        <img src="" />
-        <p></p>
+      <div class="info-box">
+        <img class="info-img" src="images/monster.png" />
+        <p>Monster!</p>
       </div>
     </div>
     <div id="quote"></div>
@@ -53,4 +53,17 @@
   </body>
 </html>
 
+<!-- Gaming Dice -->
 <!-- Photo by <a href="https://unsplash.com/@timothycdykes?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Timothy Dykes</a> on <a href="https://unsplash.com/photos/a-close-up-of-a-metal-dice-with-numbers-on-it-RIeKX09EcBc?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a> -->
+
+<!-- Forest -->
+<!-- Photo by <a href="https://unsplash.com/@rosiesun?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Rosie Sun</a> on <a href="https://unsplash.com/photos/1L71sPT5XKc?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a> -->
+
+<!-- Door -->
+<!-- Photo by <a href="https://unsplash.com/@hi_lluvia?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Lluvia Morales</a> on <a href="https://unsplash.com/photos/tHnKRfntk-o?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a> -->
+
+<!-- Treasure -->
+<!-- Photo by <a href="https://unsplash.com/@sodacheese?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Jouwen Wang</a> on <a href="https://unsplash.com/photos/UChknR2z5EM?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a> -->
+
+<!-- Monster -->
+<!-- Image by <a href="https://pixabay.com/users/openclipart-vectors-30363/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=161695">OpenClipart-Vectors</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=161695">Pixabay</a> -->
