Added quote section to index/style

--- a/index.html
+++ b/index.html
@@ -48,7 +48,13 @@
         <p>Monster!</p>
       </div>
     </div>
-    <div id="quote"></div>
+    <div id="quote">
+      <span class="quote-text"
+        >This is a quote about how great the sounds are on this site. They
+        really do make each game we play a more immersive experience.
+      </span>
+      <span class="quote-who">-Catan, Player of Hero Quest</span>
+    </div>
     <div id="footer"></div>
   </body>
 </html>
