--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <li class="nav-item"><a href="">Contact us</a></li>
     </ul>
     <div id="hero">
-      <div class="hero-item hero-card">
-        <h1 class="hero">This website is awesome</h1>
-        <p class="hero">
+      <div class="hero-item">
+        <h1 class="hero bold">This website is awesome</h1>
+        <p class="small-font">
           This website has some subtext that goes here under the main title.
           It's a smaller font and the color is lower contrast
         </p>
@@ -33,19 +33,19 @@
     <div id="info">
       <div class="info-box">
         <img class="info-img" src="images/forest.jpg" />
-        <p>Adventuring</p>
+        <p class="small-font">Adventuring</p>
       </div>
       <div class="info-box">
         <img class="info-img" src="images/door.jpg" />
-        <p>Open Door</p>
+        <p class="small-font">Open Door</p>
       </div>
       <div class="info-box">
         <img class="info-img" src="images/treaure.jpg" />
-        <p>Treasure!</p>
+        <p class="small-font">Treasure!</p>
       </div>
       <div class="info-box">
         <img class="info-img" src="images/monster.png" />
-        <p>Monster!</p>
+        <p class="small-font">Monster!</p>
       </div>
     </div>
     <div id="quote">
@@ -53,9 +53,18 @@
         >This is a quote about how great the sounds are on this site. They
         really do make each game we play a more immersive experience.
       </span>
-      <span class="quote-who">-Catan, Player of Hero Quest</span>
+      <span class="quote-who bold">-Catan, Player of Hero Quest</span>
     </div>
-    <div id="footer"></div>
+    <div id="callToAction">
+      <div>
+        <p class="bold">Call to action! It's time!</p>
+        <p class="small-font">
+          Sign up for out product by clicking the button over there!
+        </p>
+      </div>
+      <button>Sign up</button>
+    </div>
+    <footer class="small-font">Copyright © Adam Symonds 2023</footer>
   </body>
 </html>
 
