--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>DT Gaming</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="styles/style.css" />
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
